    with user expectations.
  - Changed lock and unlock callbacks in Mojo::IOLoop to not receive an
    invocant.
  - Removed deprecated support for "X-Forwarded-HTTPS".
  - Removed return values from wait method in Mojo::IOLoop::Delay.
  - Removed generate_port method from Mojo::IOLoop.
  - Removed check_file method from Mojo::Server::Morbo.
  - Replaced format method in Mojo::Log with an attribute.
  - Added with_compression method to Mojo::Transaction::WebSocket.
  - Added catch method to Mojo::EventEmitter.
  - Added append method to Mojo::Log.
  - Added check method to Mojo::Server::Morbo.
  - Updated jQuery to version 2.1.1.
  - Improved Mojo::IOLoop::Delay to automatically check if the event loop is
    already running.
  - Improved Mojo::Parameters to consistently accept arrays.
  - Improved Mojo::Collection to perform actual boolean checks. (marcus)
  - Fixed Mojo::DOM::HTML to handle slashes in unquoted attribute values
    correctly.
  - Fixed Mojo::IOLoop::Server to work correctly with newer versions of
    IO::Socket::SSL. (noxxi)
  - Fixed verification bug in Mojo::IOLoop::Server.
  - Fixed path generation bug in Mojolicious::Routes::Match.
  - Fixed warnings in Mojo::IOLoop::Delay.
  - Make empty collections return false

4.99  2014-05-12
  - Added support for performing blocking and non-blocking requests at the
    same time with Mojo::UserAgent.
  - Added nb_url method to Mojo::UserAgent::Server.
  - Improved Mojo::IOLoop::Server and Mojo::Server::Daemon to be able to
    listen on random ports.

4.98  2014-05-09
  - Removed deprecated get_line function from Mojo::Util.
  - Removed deprecated content_xml, replace_content, text_before, text_after
    and to_xml methods from Mojo::DOM.
  - Improved accept performance in Mojo::IOLoop::Server.

4.97  2014-04-30
  - Deprecated support for "X-Forwarded-HTTPS" in favor of
    "X-Forwarded-Proto".
  - Added multi-name support to param method in Mojo::Parameters.

4.96  2014-04-28